// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DnD Store Element is initiated 1`] = `
Object {
  "id-1": CoreInstance {
    "animatedFrame": null,
    "currentLeft": 450,
    "currentPosition": AxesCoordinates {
      "x": 450,
      "y": 114,
    },
    "currentTop": 114,
    "depth": 0,
    "hasToTransform": false,
    "id": "id-1",
    "isInitialized": true,
    "isVisible": true,
    "keys": Object {
      "CHK": null,
      "PK": "1-0",
      "SK": "0-0",
    },
    "offset": Object {
      "height": 50,
      "left": 450,
      "top": 114,
      "width": 170,
    },
    "order": Object {
      "parent": 0,
      "self": 0,
    },
    "ref": <div
      data-index="0"
    />,
  },
  "id-2": CoreInstance {
    "animatedFrame": null,
    "currentLeft": 450,
    "currentPosition": AxesCoordinates {
      "x": 450,
      "y": 172,
    },
    "currentTop": 172,
    "depth": 0,
    "hasToTransform": false,
    "id": "id-2",
    "isInitialized": true,
    "isVisible": true,
    "keys": Object {
      "CHK": null,
      "PK": "1-0",
      "SK": "0-0",
    },
    "offset": Object {
      "height": 50,
      "left": 450,
      "top": 172,
      "width": 170,
    },
    "order": Object {
      "parent": 0,
      "self": 1,
    },
    "ref": <div
      data-index="1"
    />,
  },
  "id-3": CoreInstance {
    "animatedFrame": null,
    "currentLeft": 450,
    "currentPosition": AxesCoordinates {
      "x": 450,
      "y": 230,
    },
    "currentTop": 230,
    "depth": 0,
    "hasToTransform": false,
    "id": "id-3",
    "isInitialized": true,
    "isVisible": true,
    "keys": Object {
      "CHK": null,
      "PK": "1-0",
      "SK": "0-0",
    },
    "offset": Object {
      "height": 50,
      "left": 450,
      "top": 230,
      "width": 170,
    },
    "order": Object {
      "parent": 0,
      "self": 2,
    },
    "ref": <div
      data-index="2"
    />,
  },
  "id-4": CoreInstance {
    "animatedFrame": null,
    "currentLeft": 450,
    "currentPosition": AxesCoordinates {
      "x": 450,
      "y": 288,
    },
    "currentTop": 288,
    "depth": 0,
    "hasToTransform": false,
    "id": "id-4",
    "isInitialized": true,
    "isVisible": true,
    "keys": Object {
      "CHK": null,
      "PK": "1-0",
      "SK": "0-0",
    },
    "offset": Object {
      "height": 50,
      "left": 450,
      "top": 288,
      "width": 170,
    },
    "order": Object {
      "parent": 0,
      "self": 3,
    },
    "ref": <div
      data-index="3"
    />,
  },
}
`;

exports[`DnD Store Returns all element connections and instance 1`] = `
Object {
  "branches": Object {
    "parents": undefined,
    "siblings": Array [
      "id-1",
      "id-2",
      "id-3",
      "id-4",
    ],
  },
  "element": CoreInstance {
    "animatedFrame": null,
    "currentLeft": 450,
    "currentPosition": AxesCoordinates {
      "x": 450,
      "y": 114,
    },
    "currentTop": 114,
    "depth": 0,
    "hasToTransform": false,
    "id": "id-1",
    "isInitialized": true,
    "isVisible": true,
    "keys": Object {
      "CHK": null,
      "PK": "1-0",
      "SK": "0-0",
    },
    "offset": Object {
      "height": 50,
      "left": 450,
      "top": 114,
      "width": 170,
    },
    "order": Object {
      "parent": 0,
      "self": 0,
    },
    "ref": <div
      data-index="0"
    />,
  },
  "parent": null,
}
`;
